perf(gc): fix the real 'heavier than Paper' regression — ZGC default -> heap-aware G1+Aikar+CompactObjectHeaders
MEASURED on DE-1 (elastic heap, PSS): Generational ZGC ~1.96GB vs G1 ~1.03GB vs
G1+CompactObjectHeaders ~1.00GB at idle — G1 is ~48% lighter. The fork was heavier
than Paper purely because it was the only process running ZGC (Paper peers use G1+Aikar).

- RecommendedFlags: heap-aware recommendedGcFlags() (G1+Aikar default; Gen-ZGC only
  >=16GB dedicated) + ADDITIVE_FLAGS (CompactObjectHeaders/StringDedup/native-trim);
  AlwaysPreTouch dedicated-only. RuntimeSelfTest 64/64.
- VictusEngine GC boot-advice made heap-aware (was hardcoded 'switch to ZGC' = the regression).
- VictusTickTimings log gated behind -Dvictus.ticktiming.log=true (default off; was 10s spam).
- e5aa1c05 startup PATCHed ZGC -> G1+COH+elastic via Application API (~halves RAM on next Start).

Research verdict: do NOT port FerriteCore/C2ME/Lithium (already in Moonrise). Full roadmap in docs/phase-3.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>